--- a/src/css/productpage.css
+++ b/src/css/productpage.css
@@ -48,10 +48,7 @@
 	padding-bottom: 1rem;
 }
 
-.filter-section label {
-	cursor: pointer;
-}
-
+.filter-section label,
 .filter-title {
 	cursor: pointer;
 }
